--- a/views/plugin_cs_monitor/analyze_task.html
+++ b/views/plugin_cs_monitor/analyze_task.html
@@ -4,8 +4,10 @@
 
 <div class="row">
     <div class="span4">
-        <span>First Run: {{=prettydate(first_run.start_time)}}</span>
-        <span>Last Run: {{=prettydate(last_run.start_time)}}</span>
+        {{if first_run:}}
+            <span>First Run: {{=prettydate(first_run.start_time)}}</span>
+            <span>Last Run: {{=prettydate(last_run.start_time)}}</span>
+        {{pass}}
         <div class="btn-group btn-group-vertical">
 
         {{=A('Just this task : %s' % (task.uuid), _class="btn", _href=URL(args=request.args(0), user_signature=True))}}
@@ -15,7 +17,7 @@
         {{if len(args) == 1:}}
             {{=A('Just today', _class="btn", _href=URL(args=(request.args(0), 'this', 'bydate', 0), user_signature=True))}}
         {{elif len(args) == 2:}}
-            {{=A('Just today', _class="btn", _href=URL(args=(request.args(0), request.args(1), 'bydate', 0), user_signature=True))}}
+            {{=A('Just today', _class="btn", _href=URL(args=(request.args(0), request.args(1), 'byday', 0), user_signature=True))}}
         {{elif len(args) == 4:}}
             {{=A('Previous Day', _class="btn", _href=URL(args=(request.args(0), request.args(1), 'byday', int(request.args(3)) + 1), user_signature=True))}}
             {{=A('Next Day', _class="btn", _href=URL(args=(request.args(0), request.args(1), 'byday', int(request.args(3)) - 1), user_signature=True))}}
@@ -33,10 +35,12 @@
     <div id="bydated"></div>
 </div>
 {{pass}}
+{{if first_run:}}
 <div class="row">
     <h4>Duration</h4>
     <div id="byduration"></div>
 </div>
+{{pass}}
 <div class="row">
     <h4>Dates</h4>
     <div id="bydate"></div>
@@ -72,48 +76,6 @@ $(function () {
             location: 'e'
         },
         series: series
-    });
-
-    var jgb_duration_series = {{=XML(jgb_duration_series)}};
-    var data = [], series = [];
-    $.each(jgb_duration_series, function(i, e) {
-            data.push(e['data']); series.push({'label' : e['label'], 'color' :
-            e['color']});
-    });
-    if (data.length == 0) data = [[null]];
-    $.jqplot('byduration', data, {
-        cursor:{
-            show: true,
-            zoom: true
-        },
-        seriesDefaults: {
-            renderer:$.jqplot.BarRenderer,
-            pointLabels: {
-                show: true,
-                location: 'n',
-                edgeTolerance: -15
-            },
-            rendererOptions: {
-                fillToZero: true,
-                barWidth : 5
-            }
-        },
-        series:series,
-        legend: {
-            renderer: $.jqplot.EnhancedLegendRenderer, show:true
-        },
-        highlighter: {
-          show: true,
-        },
-        axes: {
-            xaxis: {
-                renderer: $.jqplot.CategoryAxisRenderer,
-                rendererOptions:{sortMergedLabels:true}, label:'Seconds Elapsed'
-            },
-            yaxis : {
-                label : '# of tasks'
-            }
-        }
     });
 
     var jgb_when_series = {{=XML(jgb_when_series)}};
@@ -157,50 +119,94 @@ $(function () {
         },
         series: series
     });
+
+    {{if first_run:}}
+        var jgb_duration_series = {{=XML(jgb_duration_series)}};
+        var data = [], series = [];
+        $.each(jgb_duration_series, function(i, e) {
+                data.push(e['data']); series.push({'label' : e['label'], 'color' :
+                e['color']});
+        });
+        if (data.length == 0) data = [[null]];
+        $.jqplot('byduration', data, {
+            cursor:{
+                show: true,
+                zoom: true
+            },
+            seriesDefaults: {
+                renderer:$.jqplot.BarRenderer,
+                pointLabels: {
+                    show: true,
+                    location: 'n',
+                    edgeTolerance: -15
+                },
+                rendererOptions: {
+                    fillToZero: true,
+                    barWidth : 5
+                }
+            },
+            series:series,
+            legend: {
+                renderer: $.jqplot.EnhancedLegendRenderer, show:true
+            },
+            highlighter: {
+              show: true,
+            },
+            axes: {
+                xaxis: {
+                    renderer: $.jqplot.CategoryAxisRenderer,
+                    rendererOptions:{sortMergedLabels:true}, label:'Seconds Elapsed'
+                },
+                yaxis : {
+                    label : '# of tasks'
+                }
+            }
+        });
+    {{pass}}
     {{if len(request.args) == 4:}}
 
-    var jgb_whend_series = {{=XML(jgb_whend_series)}};
-    var data = [], series = [];
-    $.each(jgb_whend_series, function(i, e) {
-        data.push(e['data']);
-        series.push({'label' : e['label'], 'color' : e['color']});
-    });
-    if (data.length == 0) data = [[null]];
-    $.jqplot('bydated', data, {
-        legend: {
-            renderer: $.jqplot.EnhancedLegendRenderer,
-            show: true
-        },
-        cursor: {
-            show: true,
-            zoom: true
-        },
-        seriesDefaults: {
-            pointLabels: {
+        var jgb_whend_series = {{=XML(jgb_whend_series)}};
+        var data = [], series = [];
+        $.each(jgb_whend_series, function(i, e) {
+            data.push(e['data']);
+            series.push({'label' : e['label'], 'color' : e['color']});
+        });
+        if (data.length == 0) data = [[null]];
+        $.jqplot('bydated', data, {
+            legend: {
+                renderer: $.jqplot.EnhancedLegendRenderer,
+                show: true
+            },
+            cursor: {
                 show: true,
-                location: 'n',
-                edgeTolerance: -15
+                zoom: true
             },
-        },
-        axes: {
-            xaxis: {
-                renderer: $.jqplot.DateAxisRenderer,
-                tickOptions: {
-                    formatString: '%H:%M'
+            seriesDefaults: {
+                pointLabels: {
+                    show: true,
+                    location: 'n',
+                    edgeTolerance: -15
                 },
-                tickInterval: '3600000',
-                tickRenderer: $.jqplot.CanvasAxisTickRenderer,
-                label: 'When',
             },
-            yaxis: {
-                label: '# of tasks'
-            }
-        },
-        highlighter: {
-            show: true,
-        },
-        series: series
-    });
+            axes: {
+                xaxis: {
+                    renderer: $.jqplot.DateAxisRenderer,
+                    tickOptions: {
+                        formatString: '%H:%M'
+                    },
+                    tickInterval: '3600000',
+                    tickRenderer: $.jqplot.CanvasAxisTickRenderer,
+                    label: 'When',
+                },
+                yaxis: {
+                    label: '# of tasks'
+                }
+            },
+            highlighter: {
+                show: true,
+            },
+            series: series
+        });
 
     {{pass}}
 
