We can stop tasks too ^_^

--- a/views/plugin_cs_monitor/task_group.html
+++ b/views/plugin_cs_monitor/task_group.html
@@ -12,6 +12,7 @@
                 <li><a href="#" data-action="enable">Enable</a></li>
                 <li><a href="#" data-action="delete">Delete</a></li>
                 <li><a href="#" data-action="clone">Clone (and Requeue)</a></li>
+                <li><a href="#" data-action="stop">Stop</a></li>
             </ul>
         </div>
     </div>
