--- a/views/plugin_cs_monitor/index.html
+++ b/views/plugin_cs_monitor/index.html
@@ -14,6 +14,7 @@
             <li><a href="{{=URL('delete_tasks', args='3m', user_signature=True)}}" data-toggle="modal" data-target="#tasks_confirm_delete">Older than 3 months</a></li>
         </ul>
     </div>
+    <a class="btn" href="{{=URL('edit_task', args=(0, 'new'), user_signature=True)}}">New Task</a>
 </div>
 
 <div id="tasks_confirm_delete" class="modal hide fade">
