--- a/views/plugin_cs_monitor/task_details.html
+++ b/views/plugin_cs_monitor/task_details.html
@@ -17,14 +17,14 @@
     {{while len(fields)>0:}}
         <tr>
         {{k=fields.pop(0)}}
-        <td><b>{{=db.scheduler_task[k].label}}</b></td>
+        <td><b>{{=st[k].label}}</b></td>
         {{if k == 'status':}}
             <td>{{=task['status_']}}</td>
         {{else:}}
             <td>{{=task[k]}}</td>
         {{pass}}
         {{k=fields.pop(0)}}
-        <td><b>{{=db.scheduler_task[k].label}}</b></td>
+        <td><b>{{=st[k].label}}</b></td>
         {{if k == 'status':}}
             <td>{{=task['status_']}}</td>
         {{else:}}
