--- a/views/plugin_cs_monitor/task_group.html
+++ b/views/plugin_cs_monitor/task_group.html
@@ -1,76 +1,86 @@
 
+<div class="panel panel-primary">
+  <div class="panel-heading">
+    <h3 class="panel-title">Tasks Details</h3>
+  </div>
+  <div class="panel-body">
+        <div class="btn-toolbar" role="toolbar">
+            <div class="btn-group" id="tasks_actions">
+                <button class="btn btn-default" id="tasks_all_toggler">Toggle</button>
+                <button class="btn btn-default dropdown-toggle" data-toggle="dropdown">
+                <span class="caret"></span>
+                </button>
+                <ul class="dropdown-menu">
+                    <li><a href="#" data-action="disable">Disable</a></li>
+                    <li><a href="#" data-action="enable">Enable</a></li>
+                    <li><a href="#" data-action="delete">Delete</a></li>
+                    <li><a href="#" data-action="clone">Clone (and Requeue)</a></li>
+                    <li><a href="#" data-action="stop">Stop</a></li>
+                </ul>
+            </div>
+            <div class="btn-group">
+                <div class="input-group">
+                  {{into = request.args(1) and "%s, %s" % (request.args(0), request.args(1)) or request.args(0)}}
+                  {{search_placeholder = request.vars.qfilter and "%s on %s" % (request.vars.qfilter, into) or 'Search %s tasks' % into}}
+                  <input id="qfilter" name="qfilter" type="text" class="form-control" placeholder="{{=search_placeholder}}">
+                  <span class="input-group-btn">
+                    <button id="qfilter_submit" class="btn btn-default" type="button">Search</button>
+                  </span>
+                </div>
+            </div>
+            <div class="btn-group">
+                <button id="qclear" class="btn btn-warning">Clear Search</button>
+            </div>
+        </div>
+    <table id="{{=request.args(0)}}" class="task_status table table-condensed table-hover">
+        <thead>
+            <tr>
+                <th>
+                    <input id="current_page" name="current_page" class="hidden" type="string" value="none"/>
+                    <input id="tchosen_action" name="action" class="hidden" type="string" value="none"/>
+                </th>
+                <th data-sort="string">Task Name</th>
+                <th data-sort="string">Status</th>
+                <th data-sort="string">Function</th>
+                <th data-sort="string">UUID</th>
+                <th data-sort="string">Enabled</th>
+                <th data-sort="string">Start Time</th>
+                <th data-sort="string">Stop Time</th>
+                <th data-sort="string">Run #</th>
+                <th data-sort="string">Failed #</th>
+            </tr>
+        </thead>
+        <tbody>
+            {{for t_ in tasks:}}
+            <tr>
+                <td>{{=INPUT(_type="checkbox", _name="t_records", _value=t_.id, value=request.vars.t_records)}}</td>
+                <td>{{=t_.task_name}}</td>
+                <td>{{=t_.status_}}</td>
+                <td>{{=t_.function_name}}</td>
+                <td>{{=A(t_.uuid, _href=URL('task_details', args=t_.id, user_signature=True), data=dict(instant=''))}}</td>
+                <td>{{=t_.enabled}}</td>
+                <td>{{=t_.start_time}}</td>
+                <td>{{=t_.stop_time}}</td>
+                <td>{{=t_.times_run}}</td>
+                <td>{{=t_.times_failed}}</td>
+            </tr>
+            {{pass}}
+        </tbody>
+    </table>
 
-<div class="row">
-    <div class="span2">
-        <div class="btn-group" id="tasks_actions">
-            <button class="btn" id="tasks_all_toggler">Toggle <input type="checkbox" style="margin: 0;"></button>
-            <button class="btn dropdown-toggle" data-toggle="dropdown">
-            <span class="caret"></span>
-            </button>
-            <ul class="dropdown-menu">
-                <li><a href="#" data-action="disable">Disable</a></li>
-                <li><a href="#" data-action="enable">Enable</a></li>
-                <li><a href="#" data-action="delete">Delete</a></li>
-                <li><a href="#" data-action="clone">Clone (and Requeue)</a></li>
-                <li><a href="#" data-action="stop">Stop</a></li>
-            </ul>
-        </div>
-    </div>
-    <div class="span4">
-        <div class="input-append">
-            <input class="span2" id="qfilter" type="text" name="qfilter">
-            <button id="qfilter_submit" class="btn" type="button">Search</button>
-        </div>
-    </div>
+    {{if total > len(tasks):}}
+    <ul class="pager">
+        {{prev = page and URL(r=request, args=request.args, vars={'page': page and page or 1, 'qfilter':request.vars.qfilter or ''}, user_signature=True) or '#'}}
+        {{prev = prev != '#' and A('Previous', _href=prev, cid=request.cid) or A('Previous', _href='#')}}
+        {{next = total/paginate > page and URL(r=request, args=request.args, vars={'page' : page and page+2 or 2, 'qfilter':request.vars.qfilter or ''}, user_signature=True) or '#'}}
+        {{next = next != '#' and A('Next', _href=next, cid=request.cid) or A('Next', _href='#')}}
+        <li class="{{='' if page else 'disabled'}}">{{=prev}}</li>
+        <li>{{=A(page+1)}}</li>
+        <li class="{{='' if total/paginate > page else 'disabled'}}">{{=next}}</li>
+    </ul>
+    {{pass}}
+  </div>
 </div>
-
-<table id="{{=request.args(0)}}" class="task_status table table-condensed table-hover table-bordered">
-    <thead>
-        <tr>
-            <th>
-                <input id="current_page" name="current_page" class="hidden" type="string" value="none"/>
-                <input id="tchosen_action" name="action" class="hidden" type="string" value="none"/>
-            </th>
-            <th data-sort="string">Task Name</th>
-            <th data-sort="string">Status</th>
-            <th data-sort="string">Function</th>
-            <th data-sort="string">UUID</th>
-            <th data-sort="string">Enabled</th>
-            <th data-sort="string">Start Time</th>
-            <th data-sort="string">Stop Time</th>
-            <th data-sort="string">Run #</th>
-            <th data-sort="string">Failed #</th>
-        </tr>
-    </thead>
-    <tbody>
-        {{for t_ in tasks:}}
-        <tr>
-            <td>{{=INPUT(_type="checkbox", _name="t_records", _value=t_.id, value=request.vars.t_records)}}</td>
-            <td>{{=t_.task_name}}</td>
-            <td>{{=t_.status_}}</td>
-            <td>{{=t_.function_name}}</td>
-            <td>{{=A(t_.uuid, _href=URL('task_details', args=t_.id, user_signature=True))}}</td>
-            <td>{{=t_.enabled}}</td>
-            <td>{{=t_.start_time}}</td>
-            <td>{{=t_.stop_time}}</td>
-            <td>{{=t_.times_run}}</td>
-            <td>{{=t_.times_failed}}</td>
-        </tr>
-        {{pass}}
-    </tbody>
-<table>
-
-{{if total > len(tasks):}}
-<ul class="pager">
-    {{prev = page and URL(r=request, args=request.args, vars={'page': page and page or 1, 'qfilter':request.vars.qfilter or ''}, user_signature=True) or '#'}}
-    {{prev = prev != '#' and A('Previous', _href=prev, cid=request.cid) or A('Previous', _href='#')}}
-    {{next = total/paginate > page and URL(r=request, args=request.args, vars={'page' : page and page+2 or 2, 'qfilter':request.vars.qfilter or ''}, user_signature=True) or '#'}}
-    {{next = next != '#' and A('Next', _href=next, cid=request.cid) or A('Next', _href='#')}}
-    <li class="{{='' if page else 'disabled'}}">{{=prev}}</li>
-    <li>{{=A(page+1)}}</li>
-    <li class="{{='' if total/paginate > page else 'disabled'}}">{{=next}}</li>
-</ul>
-{{pass}}
 
 
 <script>
@@ -80,10 +90,16 @@ $(function() {
         var link = '{{=URL(r=request, args=request.args, user_signature=True)}}';
         web2py_ajax_page('post', link, $('#qfilter').serialize(), '{{=request.cid}}')
     });
+    $('#qclear').on('click', function(e) {
+        e.preventDefault();
+        var link = '{{=URL(r=request, args=request.args, user_signature=True)}}';
+        $.web2py.ajax_page('post', link, [], '{{=request.cid}}');
+    })
     $("#tasks_all_toggler").on('click', function(e) {
-        var checkb = $(this).find('input');
+        var checkb = $(this).hasClass('active');
+        $(this).toggleClass('active');
         var all_checkb = $("#task_group input[type='checkbox']");
-        checkb.attr('checked') ? all_checkb.attr('checked', false) : all_checkb.attr('checked', true);
+        checkb ? all_checkb.attr('checked', false) : all_checkb.attr('checked', true);
     });
     $('.task_status tbody tr').on('click', function(e) {
         if (e.target.type !== 'checkbox') {
@@ -94,7 +110,7 @@ $(function() {
     $('#tasks_actions li a').on('click', function(e) {
         e.preventDefault();
         $('#tchosen_action').val($(this).data('action'));
-        $('#current_page').val('{{=URL(args=(request.args(0),request.args(1)), user_signature=True)}}');
+        $('#current_page').val('{{=URL(args=request.args, user_signature=True)}}');
         var link = '{{=BASEURL}}';
         web2py_ajax_page('post', link, $('.task_status input').serialize(), '{{=request.cid}}')
     });
