--- a/views/plugin_cs_monitor/tasks.html
+++ b/views/plugin_cs_monitor/tasks.html
@@ -1,44 +1,38 @@
 
-<h3>Tasks</h3>
-
-<table id="summary" class="task_status table table-condensed table-hover table-bordered">
-    <thead>
-        <th>Group</th>
-        <th>Status</th>
-        <th>#</th>
-    </thead>
-    <tbody>
-        {{for group in c.keys():}}
-            <tr>
-                <td rowspan="{{=len(c[group])}}">{{=A(group, _href=URL('task_group', args=group, user_signature=True))}}</td>
-                {{statuses = c[group].keys()}}
-                {{if statuses:}}
-                    {{status = statuses.pop()}}
-                    <td>{{=A(c[group][status]['pretty'], _href=URL('task_group', args=[group,status], user_signature=True))}}</td>
-                    <td>{{=c[group][status]['count']}}</td>
-                {{else:}}
-                    <td></td>
-                    <td></td>
-                {{pass}}
-            </tr>
-            {{while len(statuses)>0:}}
-                {{status = statuses.pop()}}
+<div class="panel panel-primary">
+  <div class="panel-heading">
+    <h3 class="panel-title">Tasks</h3>
+  </div>
+  <div class="panel-body">
+    <table id="summary" class="task_status table table-condensed table-hover">
+        <thead>
+            <th>Group</th>
+            <th>Status</th>
+            <th>#</th>
+        </thead>
+        <tbody>
+            {{for group in c.keys():}}
                 <tr>
-                    <td>{{=A(c[group][status]['pretty'], _href=URL('task_group', args=[group,status], user_signature=True))}}</td>
-                    <td>{{=c[group][status]['count']}}</td>
+                    <td rowspan="{{=len(c[group])}}">{{=A(group, _href=URL('task_group', args=group, user_signature=True), cid="task_group")}}</td>
+                    {{statuses = c[group].keys()}}
+                    {{if statuses:}}
+                        {{status = statuses.pop()}}
+                        <td>{{=A(c[group][status]['pretty'], _href=URL('task_group', args=[group,status], user_signature=True), cid="task_group")}}</td>
+                        <td>{{=c[group][status]['count']}}</td>
+                    {{else:}}
+                        <td></td>
+                        <td></td>
+                    {{pass}}
                 </tr>
+                {{while len(statuses)>0:}}
+                    {{status = statuses.pop()}}
+                    <tr>
+                        <td>{{=A(c[group][status]['pretty'], _href=URL('task_group', args=[group,status], user_signature=True), cid="task_group")}}</td>
+                        <td>{{=c[group][status]['count']}}</td>
+                    </tr>
+                {{pass}}
             {{pass}}
-        {{pass}}
-    </tbody>
-</table>
-
-
-
-<script>
-$(function() {
-    $('#summary a').on('click', function(e) {
-        e.preventDefault();
-        web2py_component($(this).attr('href'), 'task_group');
-        });
-})
-</script>
+        </tbody>
+    </table>
+  </div>
+</div>
